[tool.poetry]
name = "sub1"
version = "0.1.0"
description = "Example project with a fixed dependancy on pandas pre-1.0.0"
authors = ["Your Name <you@example.com>"]
license = "na"

[tool.poetry.dependencies]
python = "3.7.4"
pandas = "0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sub1 = 'sub1.sub1_pandas:print_pandas'
